<resources>
    <string name="app_name">Access Public Displays</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="btn_fab">Filter your scan preferences!</string>
    <string name="tst_fab">Not ready yet</string>
    <string name="btn_fab_descr">Shuffle</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="error_bluetooth_le_not_supported">Bluetooth LE not supported.</string>
    <string name="error_bt_not_enabled_leaving">User declined to enable Bluetooth, app not working.</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Begin Scan</string>
    <string name="menu_stop">End Scan</string>

    <!-- ================ -->
    <!-- TextView Strings -->
    <!-- ================ -->
    <eat-comment/>

    <string name="txt_headline_weather_today">Weather for Today</string>
    <string name="txt_headline_weather_tomorrow">Weather for Tomorrow</string>
    <string name="txt_headline_weather_dat">Weather for the Day after Tomorrow</string>
    <string name="txt_headline_bus">Current bus</string>
    <string name="txt_headline_metro">Current metro</string>
    <string name="txt_headline_train">Current train</string>

    <string name="txt_weather_more_info">Click on button below to get more weather info:</string>
    <string name="txt_range_list">You got in range of displays located nearby, you can get the following information from it:</string>
    <string name="txt_range_list_empty">There are currently no displays in range.</string>

    <!-- ==================== -->
    <!-- Notification Strings -->
    <!-- ==================== -->
    <eat-comment/>

    <string name="ntxt_scan">Scanning for public displays…</string>
    <string name="ntxt_scan_found">Public Display at large hall!</string>
    <string name="ntxt_scan_descr">Get: %1$s</string>
    <string name="nact_show">Show me!</string>
    <string name="nact_stop">Stop scan</string>

    <!-- =================== -->
    <!-- Content Description -->
    <!-- =================== -->
    <eat-comment/>

    <string name="cd_btn_filter">Filter your broadcasts</string>
    <string name="cd_img_weather_today">Weather icon for today.</string>
    <string name="cd_img_weather_tomorrow">Weather icon for tomorrow.</string>
    <string name="cd_img_weather_dat">Weather icon for day after tomorrow.</string>
    <string name="title_activity_act_weather">Weather Forecast</string>
    <string name="title_activity_act_pub_transport">Public Transport</string>

    <!-- ===== -->
    <!-- Hints -->
    <!-- ===== -->
    <eat-comment/>

    <string name="hint_weather_today">Looking for the forecast today.</string>
    <string name="hint_weather_tomorrow">Looking for the forecast tomorrow.</string>
    <string name="hint_weather_dat">Looking for the forecast day after tomorrow.</string>
    <string name="hint_bus">Looking for bus schedules.</string>
    <string name="hint_metro">Looking for metro schedules.</string>
    <string name="hint_train">Looking for train schedules..</string>
    <string name="title_activity_act_multi">Public Display</string>
    <string name="title_activity_act_booking">Book Table</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_act_chat">Chatting</string>
    <string name="send_picture">Send Picture</string>
    <string name="want_to_book_a_table_or_dish_inside_el_mero_mexicano_press_here">Send and continue booking!</string>
    <string name="btn_booking">Press here to book a table nearby! El Mero Mexicano</string>
    <string name="put_in_the_amount_of_persons">Put in the amount of persons.</string>
    <string name="chat_with_your_surrounding_people">Chat with your surrounding people!</string>
    <string name="send">Send</string>
    <string name="news_amount">Current amount of news:</string>
    <string name="shout_newest">"Newest shout: "</string>
    <string name="weater_today_display">"Todays weather is: "</string>
    <string name="weather_curr_temp">"Current temperature is: "</string>
    <string name="Celcius">" Celcius"</string>
    <string name="press_weather">Press here for more weather information.</string>
    <string name="press_pubtransp">Press here for more public transport information.</string>
    <string name="newest_shoutouts">Newest shout:</string>
    <string name="press_shoutouts">Press here for more shouts.</string>
    <string name="press_news">Press here for more news information.</string>
    <string name="newest_news">Current amount of news:</string>
    <string name="press_book">Press here for more booking information.</string>
    <string name="press_chat_message">Want to write a message??</string>
    <string name="press_chat">Press here for chatting.</string>
    <string name="chat_with_people">Chat with people!</string>
    <string name="ntxt_new_info">Some new infos!</string>
    <string name="txt_litem_public_in_range">Public Display in Room. Click here.</string>
    <string name="txt_to">" bis "</string>
    <string name="title_activity_act_shout">Meldungen</string>
    <string name="title_activity_act_news">News</string>
    <string name="ntxt_news">"News: "</string>
    <string name="ntxt_book_table">Book a table!</string>
    <string name="txt_head_booking">Book a table! Fill in the information and confirm with the button:</string>
    <string name="info_book_choose_time">Choose Time!!</string>


    <string-array name="arr_food">
        <item>Schnitzel with Frites</item>
        <item>Day special: Burrito with Beef</item>
        <item>Spicy Hamburger</item>
        <item>Macaroni and Cheese</item>
        <item>Pizza Ham</item>
        <item>Baguette Rusticale</item>
    </string-array>
</resources>
