<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".act.FragWeather"
              tools:showIn="@layout/act_weather">

    <TextView
        android:id="@+id/txt_headline_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:text="@string/txt_headline_weather_today"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_weather_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_img_weather_today"/>

        <TextView
            android:id="@id/txt_weather_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:accessibilityLiveRegion="polite"
            android:hint="@string/hint_weather_today"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_headline_tomorrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:text="@string/txt_headline_weather_tomorrow"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_weather_tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_img_weather_tomorrow"/>

        <TextView
            android:id="@id/txt_weather_tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:accessibilityLiveRegion="polite"
            android:hint="@string/hint_weather_tomorrow"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_headline_dat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:accessibilityLiveRegion="polite"
        android:text="@string/txt_headline_weather_dat"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_weather_dat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_img_weather_dat"/>

        <TextView
            android:id="@id/txt_weather_dat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:accessibilityLiveRegion="polite"
            android:hint="@string/hint_weather_dat"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </LinearLayout>

    <TextView
        android:id="@id/txt_weather_more_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:accessibilityLiveRegion="polite"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
</LinearLayout>
