<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ActMainActivity">
    <item
        android:id="@+id/menu_scan"
        android:icon="@drawable/ic_action_bl_find"
        android:orderInCategory="100"
        android:title="@string/menu_scan"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_stop"
        android:icon="@drawable/ic_action_remove"
        android:orderInCategory="101"
        android:title="@string/menu_stop"
        android:visible="false"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
